# clangtoolssandbox

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp  tidy_copies.cpp
